  @startuml
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class Agent {
id/email
password
}

class  AgentRequestList{
request

}
class Request{
date
property
}


class Location{
street
city
state
zip code
}

class Property {
   area
   location
    distance_from_the_city_center
}

class Announcement {
  property
    type_of_comission
    comissionValue
  }

Agent "1*" -- "1" Agency : works for  >
Agent "1*" -- "1..*" Request : receives a  >
Agent "1*" -- "1" AgentRequestList: selects a request from >
Property "1"-- "1..*"Announcement: is needed for  >
Property "1"-- "1"Request: is needed for  >
Request "1..*"-- "1"AgentRequestList: is needed for  >
Request "1"-- "1"Announcement: converts to  >
Location "1"--"1" Property : is needed for >

Agent "1" -- "1..*" Announcement : publishes an >


@enduml